2013-09-26  Patryk Kaczmarek

	* Signal children add/remove added for box widget

2013-09-26  Patryk Kaczmarek

        * Function description fixes

2013-09-30

        * Issues deteced by Static Code Analysis fixed

2013-09-30

	* Implement restore action in eail_window

2013-10-01

	* Signal visible-data-changed support implemented for clock and datetime widgets

2013-10-24  Michal Jagiello

	* Add shrink and expand actions to genlist items

2013-10-31  Michal Jagiello

	* Remove image interface from eail_button and eail_check widgets

2013-11-25 Patryk Kaczmarek
	
	* Factory fixed to recognize widgets from elementary 1.8

2013-11-25

	* Eail Explorer tool v1.0 added

2013-11-29 Karol Furmaniak

	* Fix set/get_caret_offset for elm_fileselector_entry

2013-11-29 Karol Furmaniak

	* Fix AtkText interface for elm_bubble.

	Fixed funcs: get_text, get_character_at_offset, get_character_count,
	get_text_after_offset, get_text_at_offset, get_text_before_offset,
	get_offset_at_point

 2013-11-29 Karol Furmaniak

 	* Fix get_text_before/at/after_offset for elm_popup
