@@ -46,7 +46,11 @@
 	get_text_after_offset, get_text_at_offset, get_text_before_offset,
 	get_offset_at_point
 
- 2013-11-29 Karol Furmaniak
+2013-11-29 Karol Furmaniak
 
- 	* Fix get_text_before/at/after_offset for elm_popup
+	* Fix get_text_before/at/after_offset for elm_popup
+
+2013-12-03 Karol Furmaniak
+
+	* Add get_offset_at_point for elm_entry.
 
